Added: Update the Beautiful News entity, and wait 10s before sending the image with Telegram

--- a/automations.yaml
+++ b/automations.yaml
@@ -528,6 +528,10 @@
     platform: time
   condition: []
   action:
+  - data: {}
+    entity_id: sensor.beautifulnews
+    service: homeassistant.update_entity
+  - delay: '10'
   - data:
       data:
         photo:
