--- a/configuration.yaml
+++ b/configuration.yaml
@@ -218,6 +218,19 @@ sensor:
     scan_interval: 3600
     value_template: '{{ value_json.compliment }}'
 
+light:
+  - platform: group
+    name: Living Room
+    entities:
+      - light.living_room_1
+      - light.living_room_2
+      - light.lightstrip
+  - platform: group
+    name: Main bedroom
+    entities:
+      - light.main_bedroom_colour
+      - light.main_bedroom_bloom
+      
 homeassistant:
   customize: !include customize.yaml
   name: Home
