Updated: Big revamp of main dashboard

--- a/includes/light_groups.yaml
+++ b/includes/light_groups.yaml
@@ -9,3 +9,8 @@
   entities:
   - light.main_bedroom_ceiling
   - light.main_bedroom_bloom
+- platform: group
+  name: Reubens bedroom
+  entities:
+  - light.reuben
+  - light.reuben_ceiling
