Added: New "Quarantine Sensors" to report number of times left house, and percentage time spent in the house (using history_stats) Added: New sensor to report number of times washing machine was on in last 7 days

--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -101,3 +101,27 @@
   name: compliment
   scan_interval: 3600
   value_template: '{{ value_json.compliment }}'
+- platform: history_stats
+  name: Quarantine meter Tom
+  entity_id: person.tom
+  state: "home"
+  type: ratio
+  duration:
+    days: 7
+  end: "{{ now() }}"
+- platform: history_stats
+  name: Quarantine meter Tom count left
+  entity_id: person.tom
+  state: "home"
+  type: count
+  duration:
+    days: 7
+  end: "{{ now() }}"
+- platform: history_stats
+  name: Washing Machine Count
+  entity_id: binary_sensor.washer
+  state: "on"
+  type: count
+  duration:
+    days: 7
+  end: "{{ now() }}"
