Updated: Changed lambda to filter out erroneous readings from ultransonic sensor that result in negative height values

--- a/esphome/d1_mini_distance_temp.yaml
+++ b/esphome/d1_mini_distance_temp.yaml
@@ -35,6 +35,9 @@ sensor:
     trigger_pin: D1
     echo_pin: D2
     filters:
-    - lambda: return 10.0 - (100 * x);
+    - lambda: |-
+        if (x <= 0.10) {
+          return 10.0 - (100 * x);
+        } else return {};
     unit_of_measurement: "cm"
     name: "Sourdough Height"
